--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test Ynov</title>
+    <title></title>
 </head>
 <body>
     <h1>Mise à jour</h1>
-    <p>"kkk"</p> <!-- Mot interdit ici -->
+    <p>kkk</p> <!-- Mot interdit ici -->
 </body>
 </html>
