--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Mise à jour</h1>
-    <p>kkk</p> <!-- Mot interdit ici -->
+    <p>52</p> <!-- Mot interdit ici -->
 </body>
 </html>
