--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>52</title>
 </head>
 <body>
-    <h1>Mise à jour</h1>
+    <h1>52</h1>
     <p>52</p> <!-- Mot interdit ici -->
 </body>
 </html>
