--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>52</title>
+    <title>ututut</title>
 </head>
 <body>
-    <h1>52</h1>
-    <p>52</p> <!-- Mot interdit ici -->
+    <h1>jeupz</h1>
+    <p>jeups</p> <!-- Mot interdit ici -->
 </body>
 </html>
