--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>jeupz</h1>
-    <p>jeups</p> <!-- Mot interdit ici -->
+    <p>52</p> <!-- Mot interdit ici -->
 </body>
 </html>
